--- a/Technick-codes.html
+++ b/Technick-codes.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="../nicks-website/favcon.svg" alt="Logo" width="50" height="50">
+            <img src="/favcon.svg" alt="Logo" width="50" height="50">
             <h3>Technick-<span>codes</span></h3>
         </div>
 
