worked on the project file

--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
 </head>
 <body>
     <header>
-        <div class="logo">
-            <img src="/favcon.svg" alt="Logo" width="50" height="50">
-            <h3>Technick-<span>codes</span></h3>
-        </div>
+        <a href="" class="top-logo">
+            <div class="logo">
+                <img src="/images/favcon.svg" alt="Logo" width="50" height="50">
+                <h3>Technick-<span>codes</span></h3>
+            </div>
+        </a>
 
         <div class="nav">
             <ul>
-                <li><a href="">Project</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Socials</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="project.html">Project</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="socials.html">Socials</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
 
             <div class="support">
