adjusted some little changes for more user experience

--- a/project.html
+++ b/project.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <a href="" class="top-logo">
+        <a href="index.html" class="top-logo">
             <div class="logo">
                 <img src="/images/favcon.svg" alt="Logo" width="50" height="50">
                 <h3>Technick-<span>codes</span></h3>
@@ -30,7 +30,7 @@
             </div>
         </div>
     </header>
-    
+
     <!-- card -->
     <section class="sections">
         <h1 class="h1">My Projects</h1>
@@ -107,7 +107,9 @@
      <footer>
         <div class="footer-left">
             <div class="left">
-                <h1>Technick-codes</h1>
+                <a href="index.html">
+                    <h1>Technick-codes</h1>
+                </a>
             </div>
 
             <div class="nav-links">
@@ -124,10 +126,11 @@
 
         <div class="social-icons">
             <ul>
-                <li><a href=""><i class="fa fa-whatsapp"></i></a></li>
-                <li><a href=""><i class="fa fa-instagram"></i></a></li>
-                <li><a href=""><i class="fa fa-telegram"></i></a></li>
-                <li><a href=""><i class="fa fa-github"></i></a></li>
+                <li><a href="" title="Whatsapp"><i class="fa fa-whatsapp"></i></a></li>
+                <li><a href=""  title="Instagram"><i class="fa fa-instagram"></i></a></li>
+                <li><a href=""  title="Telegram"><i class="fa fa-telegram"></i></a></li>
+                <li><a href=""  title="Github"><i class="fa fa-github"></i></a></li>
+                <li><a href=""  title="Github"><i class="fa fa-github"></i></a></li>
             </ul>
         </div>
     </footer>
