--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <a href="" class="top-logo">
+        <a href="index.html" class="top-logo">
             <div class="logo">
                 <img src="/images/favcon.svg" alt="Logo" width="50" height="50">
                 <h3>Technick-<span>codes</span></h3>
@@ -65,6 +65,7 @@
                         <li><a href="" class="pink"><i class="fa fa-instagram"></i> Instagram</a></li>
                         <li><a href="" class="blue"><i class="fa fa-telegram"></i>Telegram</a></li>
                         <li><a href="" class="black"><i class="fa fa-github"></i>Github</a></li>
+                        <li><a href="" class="black"><i class="fa fa-dribbble"></i>Dribbble</a></li>
                     </ul>
                 </div>
 
@@ -160,7 +161,9 @@
     <footer>
         <div class="footer-left">
             <div class="left">
-                <h1>Technick-codes</h1>
+                <a href="index.html">
+                    <h1>Technick-codes</h1>
+                </a>
             </div>
 
             <div class="nav-links">
@@ -177,10 +180,11 @@
 
         <div class="social-icons">
             <ul>
-                <li><a href=""><i class="fa fa-whatsapp"></i></a></li>
-                <li><a href=""><i class="fa fa-instagram"></i></a></li>
-                <li><a href=""><i class="fa fa-telegram"></i></a></li>
-                <li><a href=""><i class="fa fa-github"></i></a></li>
+                <li><a href="" title="Whatsapp"><i class="fa fa-whatsapp"></i></a></li>
+                <li><a href="" title="Instagram"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="" title="Telegram"><i class="fa fa-telegram"></i></a></li>
+                <li><a href="" title="Github"><i class="fa fa-github"></i></a></li>
+                <li><a href="" title="Dribbble"><i class="fa fa-dribbble"></i></a></li>
             </ul>
         </div>
     </footer>
