worked on the about file and added an image

--- a/project.html
+++ b/project.html
@@ -20,8 +20,8 @@
 
         <div class="nav">
             <ul>
-                <li><a href="">Project</a></li>
-                <li><a href="">About</a></li>
+                <li><a href="project.html">Project</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="">Socials</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
