worked on the about page section and fixed some errors

--- a/about.html
+++ b/about.html
@@ -54,24 +54,35 @@
 
      
     <section class="about-section">
-        <h2>What I Do</h2>
-        <p>I specialize in creating responsive, user-friendly websites and web applications. With strong expertise in <strong>HTML, CSS, JavaScript</strong>, and <strong>React</strong>, I build digital experiences that are both functional and visually engaging.</p>
+        <div class="snowman-image">
+        </div>
+        <div class="second-row">
+            <div class="what-i-do">
+                <h2>What I Do</h2>
+                <p>I specialize in creating responsive, user-friendly websites and web applications. With strong expertise in <strong>HTML, CSS, JavaScript</strong>, and <strong>React</strong>, I build digital experiences that are both functional and visually engaging.</p>
+            </div>
+    
+            <div class="experience">
+                <h2>Experience & Background</h2>
+                <p>Over the past 4 years, I’ve worked on a variety of projects from <strong>personal portfolios</strong> and <strong>business landing pages</strong> to <strong>e-commerce websites</strong> and <strong>web applications</strong>. I've collaborated with startups, freelance clients, and small businesses, helping them build strong online presences while staying up-to-date with the latest technologies.</p>
+            </div>
+        </div>
     </section>
 
-    <section class="about-section">
-        <h2 class="experience">Experience & Background</h2>
-        <p>Over the past 4 years, I’ve worked on a variety of projects from <strong>personal portfolios</strong> and <strong>business landing pages</strong> to <strong>e-commerce websites</strong> and <strong>web applications</strong>. I've collaborated with startups, freelance clients, and small businesses, helping them build strong online presences while staying up-to-date with the latest technologies.</p>
+    <section class="about-section2">
+        <div class="snowman-img"></div>
+        <div class="philosophy">
+            <h2>My Work Philosophy</h2>
+            <p>I believe in <strong>clean codes, collaborative communication, and user-centered design.</strong> My approach is simple: understand the client’s vision, craft effective solutions, and deliver with precision and creativity. <strong>Problem solving and attention to detail are at the heart of everything I do.</strong></p>
+        </div>
     </section>
 
-    <section class="about-section">
-        <h2>My Work Philosophy</h2>
-        <p>I believe in clean code, collaborative communication, and user-centered design. My approach is simple: understand the client’s vision, craft effective solutions, and deliver with precision and creativity. Problem-solving and attention to detail are at the heart of everything I do.</p>
-    </section>
-
-    <section class="about-section">
-        <h2>A Little About Me</h2>
-        <p>When I’m not coding, you’ll find me <strong>playing football</strong>, <strong>exploring photography</strong>, or <strong>listening to Afrobeat music</strong>. These hobbies help me stay creative and bring new perspectives to my work.</p>
-    </section>
+    <div class="flexx"> 
+        <section class="about-section3">
+            <h2>A Little About Me</h2>
+            <p>When I’m not coding, you’ll find me <strong>playing football</strong>, <strong>exploring photography</strong>, or <strong>listening to Afrobeat music</strong>. These hobbies help me stay creative and bring new perspectives to my work.</p>
+        </section>
+    </div>
 
     <!-- <section class="cta-section">
         <button onclick="window.location.href='contact.html'" class="button-bottom">Contact Me</button>
