--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div class="nav">
             <ul>
-                <li><a href="project.html">Project</a></li>
+                <li><a href="project.html" class="">Project</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="socials.html">Socials</a></li>
                 <li><a href="contact.html">Contact</a></li>
