--- a/project.html
+++ b/project.html
@@ -20,7 +20,7 @@
 
         <div class="nav">
             <ul>
-                <li><a href="project.html">Project</a></li>
+                <li><a href="project.html" class="active">Project</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="">Socials</a></li>
                 <li><a href="">Contact</a></li>
