--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="../nicks-website/favcon.svg" type="image/x-icon">
     <link rel="stylesheet" href="about.css"> 
     <link rel="icon" href="/images/favcon.svg">
+     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>About</title>
 </head>
@@ -23,7 +24,6 @@
             <ul>
                 <li><a href="project.html">Project</a></li>
                 <li><a href="about.html" class="active">About</a></li>
-                <li><a href="">Socials</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
 
@@ -37,12 +37,18 @@
     <div class="flex-container">
         <div class="left">
             <div class="arrow-flex">
-                <h2 class="about">About Me</h2>
+                <div class="about-me">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="aboutme-icon">
+                        <path d="M17.841 15.659L18.017 15.836L18.1945 15.659C19.0732 14.7803 20.4978 14.7803 21.3765 15.659C22.2552 16.5377 22.2552 17.9623 21.3765 18.841L18.0178 22.1997L14.659 18.841C13.7803 17.9623 13.7803 16.5377 14.659 15.659C15.5377 14.7803 16.9623 14.7803 17.841 15.659ZM12 14V16C8.68629 16 6 18.6863 6 22H4C4 17.6651 7.44784 14.1355 11.7508 14.0038L12 14ZM12 1C15.315 1 18 3.685 18 7C18 10.2397 15.4357 12.8776 12.225 12.9959L12 13C8.685 13 6 10.315 6 7C6 3.76034 8.56434 1.12237 11.775 1.00414L12 1ZM12 3C9.78957 3 8 4.78957 8 7C8 9.21043 9.78957 11 12 11C14.2104 11 16 9.21043 16 7C16 4.78957 14.2104 3 12 3Z">
+                        </path>
+                    </svg>
+                    <h2>About Me</h2>
+                </div>
                 <img src="/images/arrow.svg" alt="">
             </div>
             <div class="my-name">
                 <h1>Johnson <span>Nicholas</span></h1>
-                <p class="dev">FRONT-END DEVELOPER</p>
+                <div class="dev">FRONT-END DEVELOPER</div>
             </div>
             <p>Hello! I'm <strong>Johnson Nicholas</strong>, a passionate and results-driven <strong>Front-End Web Developer</strong> with a keen eye for design and detail.</p>
         </div>
