--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="../nicks-website/favcon.svg" type="image/x-icon">
     <link rel="stylesheet" href="styles.css"> 
     <link rel="icon" href="/images/favcon.svg">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Nicks website</title>
 </head>
@@ -14,7 +15,7 @@
         <a href="index.html" class="top-logo">
             <div class="logo">
                 <img src="/images/favcon.svg" alt="Logo" width="50" height="50">
-                <h3>Technick-<span>codes</span></h3>
+                <h3>Technick-<span>code</span></h3>
             </div>
         </a>
 
@@ -22,7 +23,6 @@
             <ul>
                 <li><a href="project.html" class="">Project</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="socials.html">Socials</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
 
@@ -33,8 +33,8 @@
     </header>
 
     <div class="hero">
-        <h2>Hi there, I'm Nicholas</h2>
-        <h1>FRONT-END <span>DEVELOPER</span></h1>
+        <h2>Hi there, I'm Nicholas Johnson</h2>
+        <h1>FRONT-END <span id="typewriter"></span></h1>
         <div class="text">
             <div class="left-text">
                 <p>I'm currently a self taught experienced front-end developer
@@ -66,7 +66,7 @@
                         <li><a href="" class="pink"><i class="fa fa-instagram"></i> Instagram</a></li>
                         <li><a href="" class="blue"><i class="fa fa-telegram"></i>Telegram</a></li>
                         <li><a href="" class="black"><i class="fa fa-github"></i>Github</a></li>
-                        <li><a href="" class="black"><i class="fa fa-dribbble"></i>Dribbble</a></li>
+                        <li><a href="" class="pink"><i class="fa fa-dribbble"></i>Dribbble</a></li>
                     </ul>
                 </div>
 
@@ -89,7 +89,7 @@
                     <h1>1</h1>
                     <p>I create intuitive, visually appealing interfaces that
                         enhance user experience and navigation, ensuring your
-                        app is both beautiful and functional across all devices.
+                        app is both beautiful, functional and responsive across all devices.
                     </p>
                 </div>
                 <h3>UI/UX design</h3>
@@ -163,15 +163,14 @@
         <div class="footer-left">
             <div class="left">
                 <a href="index.html">
-                    <h1>Technick-codes</h1>
+                    <h1>Technick-<span>code</span></h1>
                 </a>
             </div>
 
             <div class="nav-links">
                 <ul>
-                    <li><a href="">Project</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Socials</a></li>
+                    <li><a href="project.html">Project</a></li>
+                    <li><a href="about.html">About</a></li>
                     <li><a href="">Contact</a></li>
                 </ul>
 
@@ -190,4 +189,6 @@
         </div>
     </footer>
 </body>
+
+<script src="index.js"></script>
 </html>
