worked on the contact file and fixed minor bugs

--- a/about.html
+++ b/about.html
@@ -22,14 +22,11 @@
 
         <div class="nav">
             <ul>
-                <li><a href="project.html">Project</a></li>
-                <li><a href="about.html" class="active">About</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="project.html">My_Projects</a></li>
+                <li><a href="about.html" class="active">About_Me</a></li>
+                <li><a href="contact.html">Contact_Me</a></li>
             </ul>
 
-            <div class="support">
-                <button>Support</button>
-            </div>
         </div>
 
     </header>
@@ -54,7 +51,7 @@
         </div>
 
         <div class="right">
-            <img src="/images/hero-img.jpg" alt="">
+            <img src="/images/snowman.jpg" alt="">
         </div>
     </div>
 
@@ -105,10 +102,9 @@
 
             <div class="nav-links">
                 <ul>
-                    <li><a href="">Project</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Socials</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="project.html">Projects</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
 
                <p>(c) 2025 Technick-codes. All rights reserved.</p>
@@ -116,6 +112,10 @@
         </div>
 
         <div class="social-icons">
+            
+                <div class="text">
+                    <h3>Socials</h3>
+                </div>
             <ul>
                 <li><a href="" title="Whatsapp"><i class="fa fa-whatsapp"></i></a></li>
                 <li><a href=""  title="Instagram"><i class="fa fa-instagram"></i></a></li>
