--- a/index.html
+++ b/index.html
@@ -21,14 +21,11 @@
 
         <div class="nav">
             <ul>
-                <li><a href="project.html" class="">Project</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="project.html" class="">My_Projects</a></li>
+                <li><a href="about.html">About_Me</a></li>
+                <li><a href="contact.html">Contact_Me</a></li>
             </ul>
 
-            <div class="support">
-                <button>Support</button>
-            </div>
         </div>
     </header>
 
@@ -48,7 +45,7 @@
                     design to create delightful products that scale.
                 </p>
             </div>
-            <button>Hire me!</button>
+            <a href="contact.html">Hire me!</a>
         </div>
         <div class="image-section">
             <div class="hero-image">
@@ -79,9 +76,33 @@
         <!-- <p>Welcome to my coding portfolio! Here you can find all my projects and codes.</p> -->
     </div>
 
+    <div class="my-skills">
+        <div class="my-skill">
+        </div>
+        <h1>My Skills</h1>
+        <div class="tools">
+            <ul>
+                <li><img src="/images/html.svg" alt="">
+                <p>HTML</p></li>
+                <li><img src="/images/css.svg" alt="">
+                <p>CSS</p></li>
+                <li><img src="/images/js.svg" alt="">
+                <p>JavaScript</p></li>
+                <li><img src="/images/react.svg" alt="">
+                <p>React</p></li>
+                <li><img src="/images/tailwind.svg" alt="">
+                <p>Tailwind Css</p></li>
+                <li><img src="/images/git.svg" alt="">
+                <p>Git</p></li>
+                <li><img src="/images/github.svg" alt="">
+                <p>Github</p></li>
+            </ul>
+        </div>
+    </div>
+
     <div class="assist">
         <div class="text">
-            <h1>How Can I Assist You?</h1>
+            <h1>How Can I <span>Assist You?</span></h1>
         </div>
         <div class="card">
             <div class="card1">
@@ -171,7 +192,7 @@
                 <ul>
                     <li><a href="project.html">Project</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
 
                <p>(c) 2025 Technick-codes. All rights reserved.</p>
@@ -179,6 +200,9 @@
         </div>
 
         <div class="social-icons">
+            <div class="text">
+                    <h3>Socials</h3>
+                </div>
             <ul>
                 <li><a href="" title="Whatsapp"><i class="fa fa-whatsapp"></i></a></li>
                 <li><a href="" title="Instagram"><i class="fa fa-instagram"></i></a></li>
