--- a/project.html
+++ b/project.html
@@ -21,14 +21,11 @@
 
         <div class="nav">
             <ul>
-                <li><a href="project.html" class="active">Project</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="project.html" class="active">My_Projects</a></li>
+                <li><a href="about.html">About_Me</a></li>
+                <li><a href="contact.html">Contact_Me</a></li>
             </ul>
 
-            <div class="support">
-                <button>Support</button>
-            </div>
         </div>
     </header>
 
@@ -36,9 +33,8 @@
     <section class="sections">
         <div class="my-project">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="folder">
-                <path d="M2 4C2 3.44772 2.44772 3 3 3H10.4142L12.4142 5H21C21.5523 5 22 5.44772 22 6V20C22 20.5523 21.5523 21 21 21L3 21C2.45 21 2 20.55 2 20V4ZM10.5858 6L9.58579 5H4V7H9.58579L10.5858 6ZM4 9V19L20 19V7H12.4142L10.4142 9H4Z">
-1111            </path>
-       1111 </svg>
+                <path d="M2 4C2 3.44772 2.44772 3 3 3H10.4142L12.4142 5H21C21.5523 5 22 5.44772 22 6V20C22 20.5523 21.5523 21 21 21L3 21C2.45 21 2 20.55 2 20V4ZM10.5858 6L9.58579 5H4V7H9.58579L10.5858 6ZM4 9V19L20 19V7H12.4142L10.4142 9H4Z">           </path>
+            </svg>
             <h1 class="h1">My Projects</h1>
         </div>
         <div class="section">
@@ -77,10 +73,9 @@
 
             <div class="nav-links">
                 <ul>
-                    <li><a href="">Project</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Socials</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="project.html">Projects</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
 
                <p>(c) 2025 Technick-codes. All rights reserved.</p>
@@ -88,6 +83,9 @@
         </div>
 
         <div class="social-icons">
+            <div class="text">
+                    <h3>Socials</h3>
+                </div>
             <ul>
                 <li><a href="" title="Whatsapp"><i class="fa fa-whatsapp"></i></a></li>
                 <li><a href=""  title="Instagram"><i class="fa fa-instagram"></i></a></li>
