image bugs fixed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <a href="index.html" class="top-logo">
             <div class="logo">
-                <img src="/images/favcon.svg" alt="Logo" width="50" height="50">
+                <img src="./images/favcon.svg" alt="Logo" width="50" height="50">
                 <h3>Technick-<span>code</span></h3>
             </div>
         </a>
@@ -82,19 +82,19 @@
         <h1>My Skills</h1>
         <div class="tools">
             <ul>
-                <li><img src="/images/html.svg" alt="">
+                <li><img src="./images/html.svg" alt="">
                 <p>HTML</p></li>
-                <li><img src="/images/css.svg" alt="">
+                <li><img src="./images/css.svg" alt="">
                 <p>CSS</p></li>
-                <li><img src="/images/js.svg" alt="">
+                <li><img src="./images/js.svg" alt="">
                 <p>JavaScript</p></li>
-                <li><img src="/images/react.svg" alt="">
+                <li><img src="./images/react.svg" alt="">
                 <p>React</p></li>
-                <li><img src="/images/tailwind.svg" alt="">
+                <li><img src="./images/tailwind.svg" alt="">
                 <p>Tailwind Css</p></li>
-                <li><img src="/images/git.svg" alt="">
+                <li><img src="./images/git.svg" alt="">
                 <p>Git</p></li>
-                <li><img src="/images/github.svg" alt="">
+                <li><img src="./images/github.svg" alt="">
                 <p>Github</p></li>
             </ul>
         </div>
