--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <header>
         <a href="index.html" class="top-logo">
             <div class="logo">
-                <img src="/images/favcon.svg" alt="Logo" width="50" height="50">
+                <img src="./images/favcon.svg" alt="Logo" width="50" height="50">
                 <h3>Technick-<span>codes</span></h3>
             </div>
         </a>
