image bugs fixed

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../nicks-website/favcon.svg" type="image/x-icon">
     <link rel="stylesheet" href="about.css"> 
-    <link rel="icon" href="/images/favcon.svg">
+    <link rel="icon" href="images/favcon.svg">
      <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>About</title>
@@ -14,7 +14,7 @@
     <header>
         <a href="index.html" class="top-logo">
             <div class="logo">
-                <img src="/images/favcon.svg" alt="Logo" width="50" height="50">
+                <img src="images/favcon.svg" alt="Logo" width="50" height="50">
                 <h3>Technick-<span>codes</span></h3>
             </div>
         </a>
@@ -41,7 +41,7 @@
                     </svg>
                     <h2>About Me</h2>
                 </div>
-                <img src="/images/arrow.svg" alt="">
+                <img src="images/arrow.svg" alt="">
             </div>
             <div class="my-name">
                 <h1>Johnson <span>Nicholas</span></h1>
@@ -51,7 +51,7 @@
         </div>
 
         <div class="right">
-            <img src="/images/snowman.jpg" alt="">
+            <img src="images/snowman.jpg" alt="">
         </div>
     </div>
 
