--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../nicks-website/favcon.svg" type="image/x-icon">
     <link rel="stylesheet" href="styles.css"> 
-    <link rel="icon" href="/images/favcon.svg">
+    <link rel="icon" href="images/favcon.svg">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Nicks website</title>
@@ -14,7 +14,7 @@
     <header>
         <a href="index.html" class="top-logo">
             <div class="logo">
-                <img src="./images/favcon.svg" alt="Logo" width="50" height="50">
+                <img src="images/favcon.svg" alt="Logo" width="50" height="50">
                 <h3>Technick-<span>code</span></h3>
             </div>
         </a>
@@ -82,19 +82,19 @@
         <h1>My Skills</h1>
         <div class="tools">
             <ul>
-                <li><img src="./images/html.svg" alt="">
+                <li><img src="images/html.svg" alt="">
                 <p>HTML</p></li>
-                <li><img src="./images/css.svg" alt="">
+                <li><img src="images/css.svg" alt="">
                 <p>CSS</p></li>
-                <li><img src="./images/js.svg" alt="">
+                <li><img src="images/js.svg" alt="">
                 <p>JavaScript</p></li>
-                <li><img src="./images/react.svg" alt="">
+                <li><img src="images/react.svg" alt="">
                 <p>React</p></li>
-                <li><img src="./images/tailwind.svg" alt="">
+                <li><img src="images/tailwind.svg" alt="">
                 <p>Tailwind Css</p></li>
-                <li><img src="./images/git.svg" alt="">
+                <li><img src="images/git.svg" alt="">
                 <p>Git</p></li>
-                <li><img src="./images/github.svg" alt="">
+                <li><img src="images/github.svg" alt="">
                 <p>Github</p></li>
             </ul>
         </div>
