--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,8 @@
     <title>Nicks website</title>
 </head>
 <body>
+    <div class="body">
+
     <header>
         <a href="index.html" class="top-logo">
             <div class="logo">
@@ -20,12 +22,30 @@
         </a>
 
         <div class="nav">
-            <ul>
+            <ul id="dropNavi">
                 <li><a href="project.html">My_Projects</a></li>
                 <li><a href="about.html">About_Me</a></li>
                 <li><a href="contact.html" class="active">Contact_Me</a></li>
             </ul>
-
+            
+            
+        </div>
+        <div class="hamburger" id="navBar">
+            <div class="ham-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="menu" id="menu">
+                    <path d="M3 4H21V6H3V4ZM3 11H21V13H3V11ZM3 18H21V20H3V18Z">   
+                    </path>
+                </svg>
+                <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="menu" id="cancelMenu">
+                    <path d="M10.5859 12L2.79297 4.20706L4.20718 2.79285L12.0001 10.5857L19.793 2.79285L21.2072 4.20706L13.4143 12L21.2072 19.7928L19.793 21.2071L12.0001 13.4142L4.20718 21.2071L2.79297 19.7928L10.5859 12Z">
+                    </path>
+                </svg> -->
+            </div>
+            <ul id="dropNav">
+                <li><a href="project.html">My_Projects</a></li>
+                <li><a href="about.html">About_Me</a></li>
+                <li><a href="contact.html" class="active">Contact_Me</a></li>
+            </ul>
         </div>
     </header>
 
@@ -110,7 +130,7 @@
         <div class="footer-left">
             <div class="left">
                 <a href="index.html">
-                    <h1>Technick-codes</h1>
+                    <h2>Technick-<span>code</span></h2>
                 </a>
             </div>
 
@@ -138,5 +158,8 @@
             </ul>
         </div>
     </footer>
-    </body>
-    </html>
+</div>
+
+<script src="contact.js"></script>
+</body>
+</html>
