made a little adjustment in all files

--- a/about.html
+++ b/about.html
@@ -11,6 +11,8 @@
     <title>About</title>
 </head>
 <body>
+    <div class="body">
+    
     <header>
         <a href="index.html" class="top-logo">
             <div class="logo">
@@ -50,8 +52,7 @@
             <p>Hello! I'm <strong>Johnson Nicholas</strong>, a passionate and results-driven <strong>Front-End Web Developer</strong> with a keen eye for design and detail.</p>
         </div>
 
-        <div class="right">
-            <img src="images/snowman.jpg" alt="">
+        <div class="right-img">
         </div>
     </div>
 
@@ -125,7 +126,7 @@
             </ul>
         </div>
     </footer>
-
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
