--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Nicks website</title>
 </head>
 <body>
+    <div class="body">
     <header>
         <a href="index.html" class="top-logo">
             <div class="logo">
@@ -212,7 +213,8 @@
             </ul>
         </div>
     </footer>
+</div>
+<script src="index.js"></script>
 </body>
 
-<script src="index.js"></script>
 </html>
