--- a/project.html
+++ b/project.html
@@ -11,6 +11,8 @@
     <title>Nicks website</title>
 </head>
 <body>
+    <div class="body">
+
     <header>
         <a href="index.html" class="top-logo">
             <div class="logo">
@@ -95,5 +97,6 @@
             </ul>
         </div>
     </footer>
+</div>
 </body>
 </html>
