--- a/project.html
+++ b/project.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../nicks-website/favcon.svg" type="image/x-icon">
-    <link rel="stylesheet" href="project.css"> 
+    <link rel="stylesheet" href="project.css">
+    <link rel="stylesheet" href="contact.css">
     <link rel="icon" href="images/favcon.svg">
      <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -22,22 +23,45 @@
         </a>
 
         <div class="nav">
-            <ul>
+            <ul id="dropNavi">
                 <li><a href="project.html" class="active">My_Projects</a></li>
                 <li><a href="about.html">About_Me</a></li>
                 <li><a href="contact.html">Contact_Me</a></li>
             </ul>
-
+            
+            
+        </div>
+        <div class="hamburger" id="navBar">
+            <div class="ham-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="menu" id="menu">
+                    <path d="M3 4H21V6H3V4ZM3 11H21V13H3V11ZM3 18H21V20H3V18Z">   
+                    </path>
+                </svg>
+                <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="menu" id="cancelMenu">
+                    <path d="M10.5859 12L2.79297 4.20706L4.20718 2.79285L12.0001 10.5857L19.793 2.79285L21.2072 4.20706L13.4143 12L21.2072 19.7928L19.793 21.2071L12.0001 13.4142L4.20718 21.2071L2.79297 19.7928L10.5859 12Z">
+                    </path>
+                </svg> -->
+            </div>
+            <ul id="dropNav">
+                <li><a href="project.html">My_Projects</a></li>
+                <li><a href="about.html">About_Me</a></li>
+                <li><a href="contact.html" class="">Contact_Me</a></li>
+            </ul>
         </div>
     </header>
 
     <!-- card -->
     <section class="sections">
         <div class="my-project">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="folder">
-                <path d="M2 4C2 3.44772 2.44772 3 3 3H10.4142L12.4142 5H21C21.5523 5 22 5.44772 22 6V20C22 20.5523 21.5523 21 21 21L3 21C2.45 21 2 20.55 2 20V4ZM10.5858 6L9.58579 5H4V7H9.58579L10.5858 6ZM4 9V19L20 19V7H12.4142L10.4142 9H4Z">           </path>
-            </svg>
-            <h1 class="h1">My Projects</h1>
+            <div class="project-header">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="folder">
+                    <path d="M2 4C2 3.44772 2.44772 3 3 3H10.4142L12.4142 5H21C21.5523 5 22 5.44772 22 6V20C22 20.5523 21.5523 21 21 21L3 21C2.45 21 2 20.55 2 20V4ZM10.5858 6L9.58579 5H4V7H9.58579L10.5858 6ZM4 9V19L20 19V7H12.4142L10.4142 9H4Z">           </path>
+                </svg>
+                <h1 class="h1">My Projects</h1>
+            </div>
+            <div class="here-are-some">
+                <p>Here are some of my finished projects</p>
+            </div>
         </div>
         <div class="section">
             <div class="first-card">
@@ -69,13 +93,13 @@
         <div class="footer-left">
             <div class="left">
                 <a href="index.html">
-                    <h1>Technick-codes</h1>
+                    <h2>Technick-<span>code</span></h2>
                 </a>
             </div>
 
             <div class="nav-links">
                 <ul>
-                    <li><a href="project.html">Projects</a></li>
+                    <li><a href="project.html">Project</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -98,5 +122,7 @@
         </div>
     </footer>
 </div>
+
+<script src="contact.js"></script>
 </body>
 </html>
