--- a/project.html
+++ b/project.html
@@ -43,6 +43,7 @@
                 </svg> -->
             </div>
             <ul id="dropNav">
+                <li><a href="index.html">Home</a></li>
                 <li><a href="project.html">My_Projects</a></li>
                 <li><a href="about.html">About_Me</a></li>
                 <li><a href="contact.html" class="">Contact_Me</a></li>
