--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
         <a href="index.html" class="top-logo">
             <div class="logo">
                 <img src="images/favcon.svg" alt="Logo" width="50" height="50">
-                <h3>Technick-<span>codes</span></h3>
+                <h3>Technick-<span>code</span></h3>
             </div>
         </a>
 
