header visibility added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="body">
-   <header>
+   <header id="header">
         <a href="index.html" class="top-logo">
             <div class="logo">
                 <img src="images/favcon.svg" alt="Logo" width="50" height="50">
@@ -49,6 +49,8 @@
             </ul>
         </div>
     </header>
+
+    <div class="divv"></div>
 
     <div class="hero">
         <h2>Hi there, I'm Nicholas Johnson</h2>
