--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 <body>
     <div class="body">
     
-     <header>
+     <header id="header">
         <a href="index.html" class="top-logo">
             <div class="logo">
                 <img src="images/favcon.svg" alt="Logo" width="50" height="50">
@@ -50,6 +50,8 @@
             </ul>
         </div>
     </header>
+
+    <div class="divv"></div>
 
     <div class="flexx-container">
         <div class="leftt">
