--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="project.html">My_Projects</a></li>
                 <li><a href="about.html">About_Me</a></li>
-                <li><a href="contact.html" class="">Contact_Me</a></li>
+                <li><a href="contact.html" class="active">Contact_Me</a></li>
             </ul>
         </div>
     </header>
