--- a/project.html
+++ b/project.html
@@ -44,7 +44,7 @@
             </div>
             <ul id="dropNav">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="project.html">My_Projects</a></li>
+                <li><a href="project.html" class="active">My_Projects</a></li>
                 <li><a href="about.html">About_Me</a></li>
                 <li><a href="contact.html" class="">Contact_Me</a></li>
             </ul>
