--- a/contact.html
+++ b/contact.html
@@ -23,9 +23,9 @@
 
         <div class="nav">
             <ul id="dropNavi">
-                <li><a href="project.html">My_Projects</a></li>
-                <li><a href="about.html">About_Me</a></li>
-                <li><a href="contact.html" class="active">Contact_Me</a></li>
+                <li><a href="project.html">My Projects</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="contact.html" class="active">Contact Me</a></li>
             </ul>
             
             
@@ -43,9 +43,9 @@
             </div>
             <ul id="dropNav">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="project.html">My_Projects</a></li>
-                <li><a href="about.html">About_Me</a></li>
-                <li><a href="contact.html" class="active">Contact_Me</a></li>
+                <li><a href="project.html">My Projects</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="contact.html" class="active">Contact Me</a></li>
             </ul>
         </div>
     </header>
