--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
    
 
-    <div class="hero">
+    <div class="hero" id="hero">
         <h2>Hi there, I'm Nicholas Johnson</h2>
         <h1>FRONT-END <br><span id="typewriter"></span></h1>
         <div class="text">
@@ -98,6 +98,14 @@
         
         <!-- <p>Welcome to my coding portfolio! Here you can find all my projects and codes.</p> -->
     </div>
+
+        <!-- <a href="#hero" class="up-icon">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M13.0001 22.0003L11.0002 22.0004L11.0002 5.82845L7.05044 9.77817L5.63623 8.36396L12.0002 2L18.3642 8.36396L16.9499 9.77817L13.0002 5.8284L13.0001 22.0003Z">
+                </path>
+            </svg>
+        </a> -->
+    
 
     <div class="my-skills">
         <!-- <div class="my-skill">
