made some adjustment

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         app is both beautiful, functional and responsive across all devices.
                     </p>
                 </div>
-                <h3>UI/UX design</h3>
+                <h3>UI/UX Design</h3>
             </div>
 
             <div class ="card1">
@@ -157,29 +157,28 @@
                         top-notch performance and security. 
                     </p>
                 </div>
-                <h3>Website development</h3>
+                <h3>Website Development</h3>
             </div>
 
             <div class="card1">
                 <div class="number1">
                     <h1>3</h1>
-                <p>I build jaw dropping web pages and build reliable, scalable solutions, delivering
-                    clean code that powers websites and mobile apps with
-                    top-notch performance and security. 
+                <p>I build user friendly web Apps and build reliable, scalable solutions, delivering
+                    clean code that powers mobile apps with
+                    top-notch performance. 
                 </p>
                 </div>
-                <h3>Web application</h3>
+                <h3>Web Application</h3>
             </div>
 
             <div class="card1">
                 <div class="number1">
                     <h1>4</h1>
-                <p>I build jaw dropping web pages and build reliable, scalable solutions, delivering
-                    clean code that powers websites and mobile apps with
-                    top-notch performance and security. 
+                <p>I build fast, mobile-friendly websites that adapt 
+                    seamlessly to different screen sizes using modern frameworks like Tailwind CSS. 
                 </p>
                 </div>
-                <h3>Landing page Design</h3>
+                <h3>Responsive Design</h3>
             </div>
         </div>
     </div>
