--- a/about.html
+++ b/about.html
@@ -24,8 +24,8 @@
 
         <div class="nav">
             <ul id="dropNavi">
-                <li><a href="project.html" class="active">My Projects</a></li>
-                <li><a href="about.html">About Me</a></li>
+                <li><a href="project.html" >My Projects</a></li>
+                <li><a href="about.html" class="active">About Me</a></li>
                 <li><a href="contact.html">Contact Me</a></li>
             </ul>
             
@@ -46,7 +46,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="project.html">My Projects</a></li>
                 <li><a href="about.html" class="active">About Me</a></li>
-                <li><a href="contact.html" class="">Contact Me</a></li>
+                <li><a href="contact.html">Contact Me</a></li>
             </ul>
         </div>
     </header>
