added little animation

--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
                     design to create delightful products that scale.
                 </p>
             </div> -->
-            <a href="contact.html">Hire me!</a>
+            <a href="contact.html">
+                <p>Hire me!</p>
+            </a>
         </div>
         <div class="image-section">
             <div class="hero-image">
