--- a/index.html
+++ b/index.html
@@ -115,21 +115,21 @@
         <h1>My Skills</h1>
         <div class="tools">
             <ul>
-                <li><img src="images/html.svg" alt="html-logo">
+                <li class="html"><img src="images/html.svg" alt="html-logo">
                 <p>HTML</p></li>
-                <li><img src="images/css.svg" alt="css-logo">
+                <li class="css"><img src="images/css.svg" alt="css-logo">
                 <p>CSS</p></li>
-                <li><img src="images/js.svg" alt="js logo">
+                <li class="js"><img src="images/js.svg" alt="js logo">
                 <p>JavaScript</p></li>
-                <li><img src="images/react.svg" alt="react logo">
+                <li class="react"><img src="images/react.svg" alt="react logo">
                 <p>React</p></li>
-                <li><img src="images/tailwind.svg" alt="tailwind logo">
+                <li class="tailwind"><img src="images/tailwind.svg" alt="tailwind logo">
                 <p>Tailwind Css</p></li>
-                <li><img src="images/ifigma.svg" alt="figma logo">
+                <li class="figma"><img src="images/ifigma.svg" alt="figma logo">
                 <p>Figma</p></li>
-                <li><img src="images/git.svg" alt="git logo">
+                <li class="git"><img src="images/git.svg" alt="git logo">
                 <p>Git</p></li>
-                <li><img src="images/github.svg" alt="github logo">
+                <li class="github"><img src="images/github.svg" alt="github logo">
                 <p>Github</p></li>
             </ul>
         </div>
