--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
     <title>Nicks website</title>
 </head>
 <body>
+    <div id="backToTop" class="navigate-up">
+           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M13.0001 22.0003L11.0002 22.0004L11.0002 5.82845L7.05044 9.77817L5.63623 8.36396L12.0002 2L18.3642 8.36396L16.9499 9.77817L13.0002 5.8284L13.0001 22.0003Z">
+                </path>
+            </svg>
+        </div>
     <div class="body">
+
+        
+
    <header id="header">
         <a href="index.html" class="top-logo">
             <div class="logo">
