--- a/about.html
+++ b/about.html
@@ -44,10 +44,42 @@
                 </svg> -->
             </div>
             <ul id="dropNav">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="project.html">My Projects</a></li>
-                <li><a href="about.html" class="active">About Me</a></li>
-                <li><a href="contact.html">Contact Me</a></li>
+                <li>
+                    <a href="index.html" class="active">
+                        <img src="images/home.png" alt="Home icon" class="home">
+                        <div class="ico">
+                            <p>Home</p>
+                            <p>My Home page</p>
+                        </div>
+                    </a></li>
+                <li><a href="project.html">
+                        <img src="images/project.png" alt="Project icon" class="project">
+                        <div class="ico">
+                            <p>My Projects</p>
+                            <p>View my projects</p>
+                        </div>
+                    </a></li>
+                <li><a href="about.html">
+                        <img src="images/about.png" alt="About icon" class="about">
+                        <div class="ico">
+                            <p>About Me</p>
+                            <p>Learn About me</p>
+                        </div>
+                    </a></li>
+                <li><a href="contact.html">
+                    <img src="images/contact.png" alt="Contact icon" class="contact">
+                    <div class="ico">
+                        <p>Contact Me</p>
+                        <p>Get in touch</p>
+                    </div>
+                </a></li>
+                <li><a href="contact.html">
+                    <img src="images/resume.png" alt="Resume icon" class="resume">
+                    <div class="ico">
+                        <p>My Resume</p>
+                        <p>View my CV</p>
+                    </div>
+                </a></li>
             </ul>
         </div>
     </header>
