--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="contact.html">Contact Me</a></li>
             </ul>
+            <a href="https://drive.google.com/file/d/1W78R_U0ia3UAb7Pf_AtH3D2Zu-Ntm-tP/view?usp=sharing" target="_blank" class="resume">My Resume</a>
             
             
         </div>
@@ -80,7 +81,7 @@
                         <p>Get in touch</p>
                     </div>
                 </a></li>
-                <li><a href="contact.html">
+                <li><a href="https://drive.google.com/file/d/1W78R_U0ia3UAb7Pf_AtH3D2Zu-Ntm-tP/view?usp=sharing" target="_blank">
                     <img src="images/resume.png" alt="Resume icon" class="resume">
                     <div class="ico">
                         <p>My Resume</p>
