added my resume

--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
                         <p>Get in touch</p>
                     </div>
                 </a></li>
-                <li><a href="contact.html">
+                <li><a href="https://drive.google.com/file/d/1g8SJFPgEMuAjMj4pWiLe8SIgQkA16Z3N/view?usp=sharing">
                     <img src="images/resume.png" alt="Resume icon" class="resume">
                     <div class="ico">
                         <p>My Resume</p>
