--- a/project.html
+++ b/project.html
@@ -30,7 +30,7 @@
             </ul>
              <a href="https://drive.google.com/file/d/1W78R_U0ia3UAb7Pf_AtH3D2Zu-Ntm-tP/view?usp=sharing" target="_blank" class="resume">My Resume</a>            
         </div>
-        
+
         <div class="hamburger" id="navBar">
             <div class="ham-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="menu" id="menu">
@@ -72,7 +72,7 @@
                         <p>Get in touch</p>
                     </div>
                 </a></li>
-                <li><a href="contact.html">
+                <li><a href="https://drive.google.com/file/d/1g8SJFPgEMuAjMj4pWiLe8SIgQkA16Z3N/view?usp=sharing">
                     <img src="images/resume.png" alt="Resume icon" class="resume">
                     <div class="ico">
                         <p>My Resume</p>
