added my resume

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
                 <li><a href="project.html" >My Projects</a></li>
                 <li><a href="about.html" class="active">About Me</a></li>
                 <li><a href="contact.html">Contact Me</a></li>
-                <li><a href="https://drive.google.com/file/d/1g8SJFPgEMuAjMj4pWiLe8SIgQkA16Z3N/view?usp=sharing">My Resume</a></li>
+                <li><a href="https://drive.google.com/file/d/1g8SJFPgEMuAjMj4pWiLe8SIgQkA16Z3N/view?usp=sharing" target="_blank">My Resume</a></li>
             </ul>
             
             
@@ -73,7 +73,7 @@
                         <p>Get in touch</p>
                     </div>
                 </a></li>
-                <li><a href="https://drive.google.com/file/d/1g8SJFPgEMuAjMj4pWiLe8SIgQkA16Z3N/view?usp=sharing">
+                <li><a href="https://drive.google.com/file/d/1g8SJFPgEMuAjMj4pWiLe8SIgQkA16Z3N/view?usp=sharing" target="_blank">
                     <img src="images/resume.png" alt="Resume icon" class="resume">
                     <div class="ico">
                         <p>My Resume</p>
