--- a/about.html
+++ b/about.html
@@ -27,8 +27,8 @@
                 <li><a href="project.html" >My Projects</a></li>
                 <li><a href="about.html" class="active">About Me</a></li>
                 <li><a href="contact.html">Contact Me</a></li>
-                <li><a href="https://drive.google.com/file/d/1W78R_U0ia3UAb7Pf_AtH3D2Zu-Ntm-tP/view?usp=sharing" target="_blank" class="resume">My Resume</a></li>
             </ul>
+            <a href="https://drive.google.com/file/d/1W78R_U0ia3UAb7Pf_AtH3D2Zu-Ntm-tP/view?usp=sharing" target="_blank" class="resume">My Resume</a>
             
             
         </div>
