--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Nicks website</title>
+    <script defer src="animate-scroll.js"></script>
 </head>
 <body>
     <div id="backToTop" class="navigate-up">
@@ -38,7 +39,7 @@
             </ul>
             <a href="https://drive.google.com/file/d/1W78R_U0ia3UAb7Pf_AtH3D2Zu-Ntm-tP/view?usp=sharing" target="_blank" class="resume">My Resume</a>
         </div>
-        
+
         <div class="hamburger" id="navBar">
             <div class="ham-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="menu" id="menu">
@@ -93,7 +94,7 @@
 
    
 
-    <div class="hero" id="hero">
+    <div class="hero hidden" id="hero">
         <h2>Hi there, I'm Nicholas Johnson</h2>
         <h1>FRONT-END <br><span id="typewriter"></span></h1>
         <div class="text">
@@ -150,7 +151,7 @@
         </a> -->
     
 
-    <div class="my-skills">
+    <div class="my-skills hidden">
         <!-- <div class="my-skill">
         </div> -->
         <h1>My Skills</h1>
@@ -176,7 +177,7 @@
         </div>
     </div>
 
-    <div class="assist">
+    <div class="assist hidden">
         <div class="texxt">
             <h1>How Can I <span>Assist You?</span></h1>
         </div>
@@ -226,7 +227,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container hidden">
         <div class="container1">
 
             <div class="textt">
