--- a/project.html
+++ b/project.html
@@ -95,7 +95,7 @@
                 <h1 class="h1">My Projects</h1>
             </div>
             <div class="here-are-some">
-                <p>Here are some of my finished projects</p>
+                <p>Here are some of my projects</p>
             </div>
         </div>
         <div class="section">
