still unders construction

--- a/about.html
+++ b/about.html
@@ -137,7 +137,7 @@
     <div class="flexx"> 
         <section class="about-section3">
             <h2>A Little About Me</h2>
-            <p>When I’m not coding, you’ll find me <strong>playing football</strong>, <strong>exploring photography</strong>, or <strong>listening to Afrobeat music</strong>. These hobbies help me stay creative and bring new perspectives to my work.</p>
+            <p>When I am not coding, you will find me <strong>playing football</strong>, <strong>exploring photography</strong>, or <strong>listening to Afrobeat music</strong>. These hobbies help me stay creative and bring new perspectives to my work.</p>
         </section>
     </div>
 
