--- a/project.html
+++ b/project.html
@@ -180,7 +180,7 @@
                             <p>Add and remove order from cart</p>
                         </div>
                     </div>
-                    <a href="https://technick-code.github.io/Tolxxy_Bank/" target="_blank">View Project</a>
+                    <a href="https://technick-code.github.io/tw-shola-lebam/" target="_blank">View Project</a>
     
                     <div class="language">
                         <p>Built with:</p>
